--- a/Mauling_Korea.mw
+++ b/Mauling_Korea.mw
@@ -3,7 +3,7 @@
 |conventional_long_name = Republic of Korea
 |common_name = (South Korea) Mauling Korea
 |image_flag = Flag of South Korea.svg
-|image_coat = South korea coa.png
+|image_coat = Coat of arms of South Korea.svg
 |symbol_type = Coat of arms
 |image_map =LocationSouthKorea.png
 |national_motto = 널리 인간 세계를 이롭게 하라<br>(Broadly bring benefit to humanity, 弘益人間)
