interwiki: + [[ca:Castropol]]

--- a/Castropol.mw
+++ b/Castropol.mw
@@ -35,6 +35,7 @@ Ing '''Castropol''' metung yang malating balen king [[Asturias]], [[Espanya]].
 {{asturias-geo-stub}}
 
 [[ast:Castropol]]
+[[ca:Castropol]]
 [[de:Castropol]]
 [[en:Castropol]]
 [[es:Castropol]]
