*Empty MediaWiki Message*

--- a/Kamuti.mw
+++ b/Kamuti.mw
@@ -15,11 +15,11 @@
 | binomial_authority = [[Carolus Linnaeus|L.]]
 }}
 
-[[Image:Sweetpotato5162.JPG|thumb|left|Sweet potatoes in the field.]]
+[[Image:Sweetpotato5162.JPG|thumb|left|Kamuti keng marangle.]]
 
-[[Image:Ipomoea batatasL ja01.jpg|thumb|250px|Freshly dug sweet potato.]]
+[[Image:Ipomoea batatasL ja01.jpg|thumb|250px|Deng kakulkul-kulkul a kamuti.]]
 
-[[Image:5aday sweet potato.jpg|thumb|A sweet potato.|250px]]
+[[Image:5aday sweet potato.jpg|thumb|Ing metung a kamuti.|250px]]
 
 [[Image:Thames Kumara n.jpg|thumb|Kumara for sale, Thames, The North Island, New Zealand.|250px]]
 
