+[[fr:Kazimierz Dolny]]

--- a/Kazimierz_Dolny.mw
+++ b/Kazimierz_Dolny.mw
@@ -26,6 +26,7 @@ Image:Kazimierz1964.JPG|Kazimierz in [[1964]]
 [[de:Kazimierz Dolny]]
 [[en:Kazimierz Dolny]]
 [[eo:Kazimierz Dolny]]
+[[fr:Kazimierz Dolny]]
 [[jv:Kazimierz Dolny]]
 [[lv:Kazimeža Doļna]]
 [[nl:Kazimierz Dolny]]
