robot  Adding: [[li:Categorie:Fruit]]

--- a/Category:Bungang_Tanaman.mw
+++ b/Category:Bungang_Tanaman.mw
@@ -40,6 +40,7 @@ King [[botany]], ing '''[[bungang tanaman]]''' metung yang  [[malulut]] a [[ovar
 [[ka:კატეგორია:ხილი]]
 [[ko:분류:과일]]
 [[lb:Kategorie:Uebst]]
+[[li:Categorie:Fruit]]
 [[ln:Catégorie:Mbuma]]
 [[lv:Kategorija:Augļi]]
 [[ms:Kategori:Buah]]
