--- a/George_W._Bush.mw
+++ b/George_W._Bush.mw
@@ -15,179 +15,4 @@
 Y '''George Walker Bush''' (mibait [[Juliu 6]], [[1946]]) kasalungsungan ya at  pang43ng  [[Pamuntuk ningAmerica|Pamuntuk]] ning [[United States]]. Ya ing panganeng anak ng [[George H.W. Bush]], ing pang41ng pamuntuk ning America, at [[Barbara Bush]]. Bayu king kayang pamaglub king pulitka metung yang [[negosyanti]] king  [[industria ning laru]] at meging yang managing general kayabe/mikibandi ning [[Texas Rangers (baseball)|Texas Rangers]] [[baseball]] team. Anyang 1994, tinagal yang gubernador na ning Texas. Anam a banua kayari na megin yang gubernador, tinagal at menyambut ya bilang ika-43 a pangulu na ning [[United States]].
 
 
-===Aliwapa===
-*{{imdb name|id=0124133|name=George W. Bush}}
-*{{gutenberg author| id=George+W.+Bush | name=George W. Bush}}
-*[http://www.politicalfriendster.com/showPerson.php?id=1&name=George-W-Bush George W. Bush's Connections] at [[Political Friendster]] 
-
-{{start box}}
-{{incumbent succession box|
-title=[[President of the United States|President of the United States of America]]|
-start=[[2001-01-20]]|
-before=[[Bill Clinton]]|
-}}
-{{succession box| before=[[Bob Dole]]| title=[[List of United States Republican Party presidential tickets|Republican Party presidential nominee]]| years=2000 (won), 2004 (won)| after=''N/A: Most recent Republican presidential nominee''| }}
-{{succession box | before = [[Ann Richards]] | title = [[List of Governors of Texas|Governor of Texas]] | years=1995–2000 | after=[[Rick Perry]]}}
-{{end box}}
-{{USRepPresNominees}}
-{{USpresidents}}
-
-<!-- Metadata: see [[Wikipedia:Persondata]] -->
-
-{{Persondata
-|NAME=Bush, George Walker
-|ALTERNATIVE NAMES=Bush, George, Jr.; Bush Jr.
-|SHORT DESCRIPTION=pang43[[Pamuntuk ning United States]]
-|DATE OF BIRTH=[[Juliu 6]], [[1946]]
-|PLACE OF BIRTH=[[New Haven, Connecticut|New Haven]], Connecticut
-}}
-
-
-
-{{TXGovernors}}
-{{G8 Leaders}}
-
-{{Deng Pamuntuk-stub}}
-
-<!-- Categories -->
-
-[[Category:George W. Bush| ]]
-[[Category:Presidents of the United States|Bush, George W.]]
-[[Category:Current national leaders|Bush, George W.]]
-[[Category:Governors of Texas|Bush, George W.]]
-[[Category:American aviators|Bush, George W.]]
-[[Category:American chief executives|Bush, George W.]]
-[[Category:American entrepreneurs|Bush, George W.]]
-[[Category:Baseball executives|Bush, George W.]]
-[[Category:Bonesmen|Bush, George W.]]
-[[Category:Born-again Christians|Bush, George W.]]
-[[Category:Children of U.S. Presidents|Bush, George W.]]
-[[Category:Delta Kappa Epsilon brothers|Bush, George W.]]
-[[Category:English Americans|Bush, George W.]]
-[[Category:George H.W. Bush|Bush, George W.]]
-[[Category:Harvard alumni|Bush, George W.]]
-[[Category:Methodists|Bush, George W.]]
-[[Category:People from Connecticut|Bush, George W.]]
-[[Category:Pro-life politicians|Bush, George W.]]
-[[Category:Texas Rangers|Bush, George W.]]
-[[Category:Time Magazine Person of the Year|Bush, George W.]]
-[[Category:Republican Party (United States) presidential nominees|Bush, George W.]]
-[[Category:Worst Actor Razzie|Bush, George W.]]
-[[Category:Yale alumni|Bush, George W.]]
-[[Category:1946 births|Bush, George W.]]
-[[Category:Living people|Bush, George W.]]
-[[Category: Phillips Academy alumni|Bush, George W.]]
-
-<!-- language links -->
-
-[[af:George W. Bush]]
-[[als:George W. Bush]]
-[[ang:George W. Bush]]
-[[ar:جورج دبليو بوش]]
-[[ast:George Walker Bush]]
-[[az:Corc Uolker Buş]]
-[[bar:George W. Bush]]
-[[bat-smg:George W. Bush]]
-[[be:Джордж Уокер Буш]]
-[[be-x-old:Джордж Ўокер Буш]]
-[[bg:Джордж Уокър Буш]]
-[[bn:জর্জ ডব্লিউ বুশ]]
-[[bpy:জর্জ ৱাকার বুশ]]
-[[br:George Walker Bush]]
-[[bs:George W. Bush]]
-[[ca:George Walker Bush]]
-[[cbk-zam:George W. Bush]]
-[[cs:George W. Bush]]
-[[cy:George W. Bush]]
-[[da:George W. Bush]]
-[[de:George W. Bush]]
-[[dv:ޖޯޖް ވޯކަރ ބުޝް]]
-[[el:Τζωρτζ Μπους (νεότερος)]]
-[[en:George W. Bush]]
-[[eo:George W. Bush]]
-[[es:George W. Bush]]
-[[et:George W. Bush]]
-[[eu:George W. Bush]]
-[[fa:جورج دبلیو بوش]]
-[[fi:George W. Bush]]
-[[fo:George W. Bush]]
-[[fr:George W. Bush]]
-[[frp:George Walker Bush]]
-[[fy:George W. Bush]]
-[[ga:George W. Bush]]
-[[gd:George W. Bush]]
-[[gl:George Walker Bush]]
-[[gv:George W. Bush]]
-[[he:ג'ורג' ווקר בוש]]
-[[hi:जॉर्ज वॉकर बुश]]
-[[hr:George W. Bush]]
-[[hsb:George W. Bush]]
-[[hu:George W. Bush]]
-[[hy:Ջորջ Վոկեր Բուշ]]
-[[id:George W. Bush]]
-[[io:George W. Bush]]
-[[is:George W. Bush]]
-[[it:George W. Bush]]
-[[ja:ジョージ・W・ブッシュ]]
-[[jbo:djordj.uakr.buc]]
-[[ka:ჯორჯ უოლკერ ბუში]]
-[[kk:Буш, Джордж]]
-[[kn:ಜಾರ್ಜ್ ಡಬ್ಲ್ಯು. ಬುಷ್]]
-[[ko:조지 W. 부시]]
-[[ksh:George W. Bush]]
-[[kv:Буш, Джордж Уокер]]
-[[la:Georgius W. Bush]]
-[[lb:George W. Bush]]
-[[li:George W. Bush]]
-[[ln:George Walker Bush]]
-[[lt:George Walker Bush]]
-[[lv:Džordžs V. Bušs]]
-[[ml:ജോര്‍ജ്ജ് ഡബ്ല്യു. ബുഷ്]]
-[[mn:Жорж Уокер Буш]]
-[[mr:जॉर्ज डब्ल्यू. बुश]]
-[[ms:George W. Bush]]
-[[nah:George W. Bush]]
-[[nap:George W. Bush]]
-[[nds:George W. Bush]]
-[[nds-nl:George Walker Bush]]
-[[nl:George W. Bush]]
-[[nn:George W. Bush]]
-[[no:George W. Bush]]
-[[nrm:George W. Bush]]
-[[oc:George Walker Bush]]
-[[pdc:George W. Bush]]
-[[pl:George W. Bush]]
-[[ps:جورج ډبليو بوش]]
-[[pt:George W. Bush]]
-[[qu:George Walker Bush]]
-[[rm:George W. Bush]]
-[[ro:George W. Bush]]
-[[ru:Буш, Джордж Уокер]]
-[[sa:जार्ज डबल्यु बुश]]
-[[scn:George W. Bush]]
-[[sco:George W. Bush]]
-[[se:George W. Bush]]
-[[sh:George W. Bush]]
-[[simple:George W. Bush]]
-[[sk:George W. Bush]]
-[[sl:George W. Bush]]
-[[so:George W. Bush]]
-[[sq:George W. Bush]]
-[[sr:Џорџ В. Буш]]
-[[sv:George W. Bush]]
-[[sw:George W. Bush]]
-[[ta:ஜார்ஜ் வாக்கர் புஷ்]]
-[[tg:Ҷорҷ Уокер Буш]]
-[[th:จอร์จ ดับเบิลยู. บุช]]
-[[tl:George W. Bush]]
-[[tpi:George Walker Bush]]
-[[tr:George W. Bush]]
-[[ty:George W. Bush]]
-[[uk:Буш Джордж Вокер]]
-[[ur:جارج ڈبلیو بش]]
-[[uz:George W. Bush]]
-[[vi:George W. Bush]]
-[[yi:דזשארדזש וואקער בוש]]
-[[zh:乔治·沃克·布什]]
-[[zh-min-nan:George W. Bush]]
-[[zh-yue:喬治布殊]]
+America is the best country ever so suck my dick bitches. George W. Bush sucks rotton pussy and needs stop having sexual relations with little kids. so fuck him bitches
