*Empty MediaWiki Message*

--- a/San_Jose,_California.mw
+++ b/San_Jose,_California.mw
@@ -70,6 +70,11 @@
 |footnotes              = 
 }} <!-- Infobox ends -->
 
+[[Image:San Jose California aerial view south.jpg|thumb|Mayayakit king babo angin ning San Jose. Ing salapungan ning [[Interstate 280 (California)|I-280]] ampo ning Guadalupe Parkway mayayakit ya keng lalam.  Ing mayayakit keng yang mauli.]]
+
+
+[[Image:SanJoseDowntownIMG016elf wb.jpg|thumb|Ing Downtown San Jose makalawe keng [[The Tech Museum of Innovation|Tech Museum]] papuntang [[Mount Hamilton (California)|Mount Hamilton]]; ding kayang telabunduk keng gulut papakit de ing kule aluntiang pangwinter.]]
+
 ==Lawen ya rin==
 *[[List of notable residents of San Jose, California]]
 *[[List of school districts in Santa Clara County, California]]
