*Empty MediaWiki Message*

--- a/San_Jose,_California.mw
+++ b/San_Jose,_California.mw
@@ -10,8 +10,8 @@
 |image_seal             = Sj city seal.jpg
 |image_map              = SanJoseMapWithLAFCOandCityLabelsandCA.png
 |mapsize                = 
-|map_caption            = Location of San Jose within [[Santa Clara County, California]].
-|subdivision_type       = [[Countries of the world|Country]]
+|map_caption            = Karinan ning San Jose kilub ning [[Santa Clara County, California]].
+|subdivision_type       = [[Countries of the world|Bangsa]]
 |subdivision_name       = [[United States of America]]
 |subdivision_type1      = [[Political divisions of the United States|State]]
 |subdivision_name1      = [[California]]
