*Empty MediaWiki Message*

--- a/San_Jose,_California.mw
+++ b/San_Jose,_California.mw
@@ -70,6 +70,8 @@
 |footnotes              = 
 }} <!-- Infobox ends -->
 
+Ing '''San Jose''' ({{IPAEng|ˌsænhoʊˈzeɪ}})  keng amanung [[Spanish language|Spanish]]) o kaya '''San José''' iya ing  [[List of cities in California (by population)|pangatlung pekamaragul]] a lakanbalen king [[California]], ampong [[List of United States cities by population|pangapulung pekamaragul]] king [[United States]].  Iti ing [[luklukan county]] ning [[Santa Clara County, California|Santa Clara County]]. Ing San Jose atiu king Santa Clara Valley, king mauling danggut ning [[San Francisco Bay Area]], ing labuad a makadalerayang [[Silicon Valley]].  Dati iti malati yang [[asikan]] a lakanbalen, ing San Jose meging yang batubalani kareng bayu-bayu a manibat kareng suburban kareng bayung pakatalakad a pituknangan pilatan nign 1960s ampong 1990s, at ngeni iti ing pekamaragul diling lakanbalen keng  [[Pangulung California]]. Ing opisyal a [[United States Census Bureau]] populasyun para keng  [[July 1]], [[2006]] mga 929,936 ya.<ref name="06EST"/> Ing California Departamentu ning Finance tatantian na ing populasyun inyang [[Eneru 1]], [[2008]] 989,496 ya.
+
 [[Image:San Jose California aerial view south.jpg|thumb|Mayayakit king babo angin ning San Jose. Ing salapungan ning [[Interstate 280 (California)|I-280]] ampo ning Guadalupe Parkway mayayakit ya keng lalam.  Ing mayayakit keng yang mauli.]]
 
 
