The file [[:Image:BelgorodOblGerb.jpg]] has been replaced by [[:Image:Герб_Белгородской_области.gif]] by administrator [[:commons:User:Butko]]: ''exact, or scaled-down duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Belgorod_Oblast.mw
+++ b/Belgorod_Oblast.mw
@@ -3,7 +3,7 @@
 |RussianName=Белгородская область
 |LocatorMap=Map of Russia - Belgorod Oblast (2008-03).svg
 |LocatorMapLegend=Karinan ning Belgorod Oblast king Russia
-|CoatOfArms=BelgorodOblGerb.jpg
+|CoatOfArms=Герб_Белгородской_области.gif
 |CoatOfArmsLink=[[Sagkal ning armas ning Belgorod Oblast]]
 |Flag=Flag of Belgorod Oblast.png
 |FlagLink=[[Bandera ning Belgorod Oblast]]
