*Empty MediaWiki Message*

--- a/Chitradurga.mw
+++ b/Chitradurga.mw
@@ -1,4 +1,4 @@
-''This article is about the town of Chitradurga. For article on Chitradurga district, please see [[Chitradurga district|here]].
+''Ining  articulu tungkul ya king balen ning Chitradurga. Para king distritu ning Chitradurga, pakilawe me ing [[w:Chitradurga district|keni]].
 <!-- See [[Wikipedia:WikiProject Indian cities]] for details -->{{Infobox Indian Jurisdiction |
 native_name = Chitradurga | 
 type = city | 
