--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -38,7 +38,7 @@
 |website= [http://www.plm.edu.ph/ www.plm.edu.ph]
 |affiliations  = [[Association of Southeast Asian Institutions of Higher Learning|ASAIHL]], [http://www.sut.ac.th/auap/about_Member_establish.htm AUAP], [[International Association of Universities|IAU]], [[Intramuros Consortium]], [[#Memberships in organizations|among others]]
 }}
-Ing '''Pamantasan ng Lungsod ng Maynila''' ('''''Universidad ning Lakanbalen ning Menila''''') king [[Kapampangan (amanu)]], a karaniwang [[acronyms in the Philippines|mayayaus a]] '''PLM''', o '''''Pamantasan'''''), ing pekamaragul a universidad a palakad ning kapamahalan a alang bayad.<ref name=mbo_01>{{cite web
+Ing '''Pamantasan ng Lungsod ng Maynila''' ('''''Universidad ning Lakanbalen ning Menila''''') king [[Kapampangan (amanu)]], a karaniwang mayayaus a '''PLM''', o '''''Pamantasan'''''), ing pekamaragul a universidad a palakad ning kapamahalan a alang bayad.<ref name=mbo_01>{{cite web
 | url = http://www.mb.com.ph/issues/2004/06/15/SCAU2004061511906.html
 | title = Pamantasan ng Lungsod ng Maynila celebrates 39th founding anniversary
 | accessdate = 2006-12-25
