*Empty MediaWiki Message*

--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -2,7 +2,7 @@
 {{Infobox_University 
 |native_name = [[Image:Plmlogo2.JPG|250px|]]
 |name = <br>Universidad ning Lakanbalen ning Menila</br>
-|image         = [[Image:PLM GPA.jpg|200px]]
+|image         = [[Image:PLM.jpg|200px]]
 |motto         = ''Benchmarking the New Filipino University'' 
 |established   = [[1965]]
 |type          = [[Public university|Pangmalda o publicu]], [[#City University System|Universidad a Pang-lakanbalen]]
@@ -34,7 +34,7 @@
 |country       =  [[Philippines]]
 |free_label    = Imno 
 |free          = [[Pamantasang Mahal]] (Universidad a Luluguran) 
-|colors        = {{color box|yellow}}{{color box|green}}{{color box|blue}}{{color box|red}}{{color box|white}}{{color box|orange}}
+|colors        = {{color box|yellow}} {{color box|green}} {{color box|blue}} {{color box|red}}{{color box|white}} {{color box|orange}}
 |website= [http://www.plm.edu.ph/ www.plm.edu.ph]
 |affiliations  = [[Association of Southeast Asian Institutions of Higher Learning|ASAIHL]], [http://www.sut.ac.th/auap/about_Member_establish.htm AUAP], [[International Association of Universities|IAU]], [[Intramuros Consortium]], [[#Memberships in organizations|among others]]
 }}
