--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -1,7 +1,7 @@
 {{otheruses}}
 {{Infobox_University 
-|native_name = [[Image:Plmlogo2.JPG|250px|]]
-|name = <br>Universidad ning Lakanbalen ning Menila</br>
+|native_name = <br>Universidad ning Lakanbalen ning Menila</br>
+|name = [[Image:Plmlogo2.JPG|250px|]]
 |image         = [[Image:PLM.jpg|200px]]
 |motto         = ''Benchmarking the New Filipino University'' 
 |established   = [[1965]]
