*Empty MediaWiki Message*

--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -71,6 +71,8 @@ Ing '''Pamantasan ng Lungsod ng Maynila''' ('''''Universidad ning Lakanbalen nin
 * [http://www.asaihl.org/memb_plm.htm Association of South East Asian Institutes of Learning]
 * [http://www.wiki-maps.com/manila/lid/pamantasan-ng-lungsod-ng-maynila Wikipedia Map]
 
+{{commons|Pamantasan ng Lungsod ng Maynila}}
+
 {{Intramuros Consortium}}
 {{Geolinks-cityscale|14.586781|120.976333}}
 
