*Empty MediaWiki Message*

--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -1,5 +1,5 @@
 {{Infobox_University 
-|native_name = <br>Universidad ning Lakanbalen ning Menila</br>
+|native_name = <br>'''Universidad ning Lakanbalen ning Menila'''</br>
 |name = [[Image:Plmlogo2.JPG|250px|]]
 |image         = [[Image:PLM.jpg|200px]]
 |motto         = ''Benchmarking the New Filipino University'' 
