*Empty MediaWiki Message*

--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -26,14 +26,14 @@
 | language = 
 | archiveurl = http://www.manilatimes.net/national/2007/aug/13/yehey/opinion/20070813opi5.html
 | archivedate =2007-08-13
-| quote =Last Thursday, I was appointed by the Board of Regents of PLM as University President. PLM is a unique learning institution. With over ten thousand students, faculty, and staff, the challenge of running the university might seem daunting. But its uniqueness, that it is essentially an honors school where only the students from lower income families with excellent scholastic records are admitted, appeals to my sense of leadership and education so much that any doubts or worries that I might have are overcome.}}</ref>
+| quote =}}</ref>
 |endowment     = [[PHP]] 330 million (excluding [[OMMC]] budget)
 <ref name="ap_01">Boniquit, Celeste J. "PLM Budget Up by 100M." ''Ang Pamantasan, Vol. XXIII, No. 3''. April 01, 2003.</ref> 
 |city          = {{flagicon|Philippines}} [[Manila]] 
 |country       =  [[Philippines]]
 |free_label    = Imno 
 |free          = Pamantasang Mahal (Universidad a Luluguran) 
-|colors        = {{color box|yellow}} {{color box|green}} {{color box|blue}} {{color box|red}}{{color box|white}} {{color box|orange}}
+|colors        = {{color box|yellow}} {{color box|green}} {{color box|blue}} {{color box|red}} {{color box|white}} {{color box|orange}}
 |website= [http://www.plm.edu.ph/ www.plm.edu.ph]
 |affiliations  = [[Association of Southeast Asian Institutions of Higher Learning|ASAIHL]], [http://www.sut.ac.th/auap/about_Member_establish.htm AUAP], International Association of Universities, Intramuros Consortium, [[#Memberships in organizations|among others]]
 }}
