This emblem and flag isn't official from the department.

--- a/Loire-Atlantique.mw
+++ b/Loire-Atlantique.mw
@@ -7,7 +7,7 @@ population=1,192,176<br>1,134,266|pop_date=Jan.1, 2004 estimate<br>&nbsp;-March 
 area=6,815|area_scale=9|
 arrond=4|cantons=59|communes=221|
 president=[[Patrick Mareschal]]|pres_party=|
-img_coa=blason44.PNG|
+img_coa=|
 }}
 '''Loire-Atlantique''' (formerly '''Loire-Inférieure''') metung yang [[Ding Departamentu ning France|departamentu]] king albugang pampang ning [[France]] mipalagyu keng [[Loire a Ilug]] at ning  [[Atlantic Ocean]].
 
