*Empty MediaWiki Message*

--- a/Wernher_von_Braun.mw
+++ b/Wernher_von_Braun.mw
@@ -10,7 +10,7 @@
 | birth_date  = {{birth date|1912|3|23}}
 | birth_place = [[Wyrzysk| Wirsitz]], [[German Empire]]
 | death_date  = {{death date and age|1977|6|16|1912|3|23}}
-| death_place = [[Alexandria, Virginia]], [[USA]] 
+| death_place = [[Alexandria, Virginia|Alexandria]], [[Virginia]], [[USA]] 
 | death_cause = Cancer
 | known       = 
 | occupation  = [[Germany|German]] [[rocket]] engineer ampong designer.
