*Empty MediaWiki Message*

--- a/Template:Infobox_Person.mw
+++ b/Template:Infobox_Person.mw
@@ -1,7 +1,7 @@
 <noinclude>{{start infobox page}}</noinclude><!--
 -->{{Infobox
 |bodyclass  = biography vcard
-|bodystyle  = width:{{#if:{{{box_width|}}} |{{{box_width}}} |22em}}; font-size:95%; text-align:left;
+|bodystyle  = width:{{#if:{{{box_width|}}} |{{{box_width}}} |22em}}; font-size:95%; text-align:right;
 |above      = '''{{{name|{{PAGENAME}}}}}'''
 |aboveclass = fn
 |abovestyle = text-align:center; font-size:125%;
