Miurung la reng in-edit nang [[Special:Contributions/Val2397|Val2397]] ([[User talk:Val2397|Pamisabi-sabi]]); binalik neng [[User:Katimawan2005|Katimawan2005]] king tauling bersion

--- a/Template:Infobox_Person.mw
+++ b/Template:Infobox_Person.mw
@@ -14,7 +14,7 @@
 |imageclass = {{image class|{{{image}}}}}
 |imagestyle = padding:4pt; line-height:1.25em; text-align:center; font-size:8pt;
 |caption    = <div style="padding-top:2pt;">{{{caption<includeonly>|</includeonly>}}}</div>
-|labelstyle = padding:0.2em 1.0em 0.2em 0.2em; background:transparent; line-height:1.2em; text-align:right; font-size:90%;
+|labelstyle = padding:0.2em 1.0em 0.2em 0.2em; background:transparent; line-height:1.2em; text-align:left; font-size:90%;
 |datastyle  = padding:0.2em; line-height:1.3em; vertical-align:middle; font-size:90%;
 
 |label1  = {{#if:{{{birth_name<includeonly>|</includeonly>}}}<!--
