--- a/Template:Infobox.mw
+++ b/Template:Infobox.mw
@@ -1,4 +1,4 @@
-<table class="infobox {{{bodyclass|}}}" cellspacing="5" style="width:25em; text-align: left; font-size: 88%; {{{bodystyle|}}}"><!--
+<table class="infobox {{{bodyclass|}}}" cellspacing="5" style="width:25em; text-align: right; font-size: 88%; {{{bodystyle|}}}"><!--
  Caption
 -->{{#if:{{{title|}}}|<caption class="{{{titleclass|}}}" style="font-size: 130%; font-weight: bold; {{{titlestyle|}}}">{{{title}}}</caption>}}
 <!--
