Pamanulid king pangalikas king caption ning monumentu nang P. Macapagal

--- a/Pamantasan_ng_Lungsod_ng_Maynila.mw
+++ b/Pamantasan_ng_Lungsod_ng_Maynila.mw
@@ -39,7 +39,7 @@
 }}
 
 [[Image:PLM GPA.jpg|thumb|230px|left|Ing PLM Main Campus]]
-[[Image:PLM MMP.jpg|thumb|left|230px|Ang Monumento ing [[Diosdado Macapagal|Pangulong Diosdado Macapagal]]]]
+[[Image:PLM MMP.jpg|thumb|left|230px|Ing Monumentu nang [[Diosdado Macapagal|Pamuntuk Diosdado Macapagal]]]]
 
 Ing '''Pamantasan ng Lungsod ng Maynila''' ('''''Universidad ning Lakanbalen ning Menila''''') king [[Kapampangan (amanu)]], a karaniwang mayayaus a '''PLM''', o '''''Pamantasan'''''), ing pekamaragul a universidad a palakad ning kapamahalan a alang bayad.<ref name=mbo_01>{{cite web
 | url = http://www.mb.com.ph/issues/2004/06/15/SCAU2004061511906.html
