*Empty MediaWiki Message*

--- a/Dabra.mw
+++ b/Dabra.mw
@@ -33,4 +33,5 @@ Ing '''Dabra''' metung yang balen ampong metung a [[w:municipality|munisipalidad
 {{MadhyaPradesh-geo-stub}}
 
 [[bn:দাব্রা]]
+[[en:Dabra, Gwalior]]
 [[vi:Dabra]]
