--- a/Dadra_ampong_Nagar_Haveli.mw
+++ b/Dadra_ampong_Nagar_Haveli.mw
@@ -21,7 +21,7 @@
 |website             = dnh.nic.in
 }}
 :''Para king uri ning musikang Indian, lon ya ing [[Dadra]]''.
-Ing '''Dadra ampong Nagar Haveli''' o '''Dadra and Nagar Haveli''' ([[Gujarati language|Gujarati]]: દાદરા અને નગર હવેલી, [[Marathi]]: दादरा आणि नगर हवेली, [[Portuguese language|Portuguese]]: Dadrá e Nagar-Aveli) metung yang [[estadu ampong teritoriu ning India|Union Territory]] king albugang [[India]]. Makasipit ya ing Nagar Haveli kareng estadu ning [[Maharashtra]] ampong [[Gujarat]], kabang ing Dadra, metung yang ''[[w:enclave|enclave]] a mapilang kilometru king pangulu ning Nagar Haveli king Gujarat. Ing [[Silvassa]] ing kayang tungku (capitoliu o cabecera).    
+Ing '''Dadra ampong Nagar Haveli''' o '''Dadra and Nagar Haveli''' ([[Gujarati language|Gujarati]]: દાદરા અને નગર હવેલી, [[Marathi]]: दादरा आणि नगर हवेली, [[Portuguese language|Portuguese]]: Dadrá e Nagar-Aveli) metung yang [[estadu ampong teritoriu ning India|Union Territory]] king albugang [[India]]. Makasipit ya ing Nagar Haveli kareng estadu ning [[Maharashtra]] ampong [[Gujarat]], kabang ing Dadra, metung yang ''[[w:enclave|enclave]]'' a mapilang kilometru king pangulu ning Nagar Haveli king Gujarat. Ing [[Silvassa]] ing kayang tungku (capitoliu o cabecera).    
 
 ==Dalerayan==
 {{reflist}}
