--- a/Henri_Coandă.mw
+++ b/Henri_Coandă.mw
@@ -5,6 +5,8 @@ Mibait ya king [[Bucharest]], i Coandă pangadua yang anak ning maragul a famili
 
 I Coandă megaral ya king ''Petrache Poenaru'' Communal School king Bucharest, kaibat ([[1896]]) king ing Liceu ''Sf. Sava'' ([[Saint Sava National College]]). Kaibat ning atlung banua ([[1899]]), ing tatang na, a maburi yang mika karera ya keng campung para keng kayang anak, at pepalipat ne keng Kampung Lycee king [[Iaşi]]. Migraduate ya ketang instituyun a ita inyang [[1903]] a mika rankung [[sergeant major]], at sindu na ing kayang pamagaral keng Pipagaralan a  Artillery, Kampung, ampong Pangdagat a Engineering king Bucharest. Miparala ya keng artillery regiment king  [[Aleman]] ([[1904]]), megpalista ya keng [[Technische Hochschule]] king [[Charlottenburg]], [[Berlin]]. 
 
+I Coandă migraduate ya bilang artillery officer, dapot auing ya keng technical a kagutgutan ning pamanyulapo. Inyang [[1905]], ginawa yang missile-aeroplaneu para keng [[Romanian Army]]. Sindu na ing kayang pamagaral ([[1907]]-[[1908]]) king [[Montefiore Institute]] king [[Liège (lakanbalen)|Liège]], [[Belgium]], nung nu ikit ne i [[Gianni Caproni]]. Inyang [[1908]] i Coandă mibalik ya [[Romania]] para sumuyu bilang kikilus a opisyal keng Pangaduang Artillery Regiment. Nanupata, ing kayang kaladuang mapanimbentu e makalugal keng kayang panga kampung.  Menyad yang paintulut para lumual ya keng kampung, kaibat kinua na ing kalamangan ning kayang pangatimawa a linuslus yang makaba papuntang [[Isfahan (city)|Isfahan]], [[Teheran]], ampong [[Tibet]]. Kaibat nang mibalik inyang [[1909]], minayan ya king [[Paris]], nung nu pepalista ya keng bayun mitatag a  École Nationale Superieure d'Ingenieurs en Construction Aéronautique (ngeni ing [[École Nationale Supérieure de l'Aéronautique et de l'Espace]], kebaluan bilang SUPAERO).  Kaibat ning metung a banua ([[1910]]) migrauduate ya bilang mumunang diling keng kayangclasi ning [[Aerospace engineering|aeronautical engineers]].
+
 
 
 
