*Empty MediaWiki Message*

--- a/Darjeeling.mw
+++ b/Darjeeling.mw
@@ -140,6 +140,8 @@ Ing '''Darjeeling''' ([[Nepali language|Nepali]]: {{IPAudio|Darjeeling.ogg|เคฆเค
 
 {{featured article}}
 
+{{stub}}
+
 [[Category:Cities and towns in West Bengal]]
 [[Category:Indian hill stations]]
 [[Category:Darjeeling]]
