*Empty MediaWiki Message*

--- a/Delhi.mw
+++ b/Delhi.mw
@@ -6,7 +6,7 @@
 |latd                   = 28.61
 |longd                  = 77.23
 |skyline                = Image-New Delhi Lotus.jpg
-|skyline_caption        = [[Lotus Temple|Bahá'í Lotus Temple]] in [[South Delhi]]
+|skyline_caption        = [[Lotus Temple|Ing Bahá'í Lotus Temple]] king [[w:South Delhi|Mauling Delhi]]
 |locator_position       = right
 |state_name             = Delhi
 |leader_title           = [[Chief Minister]]
