*Empty MediaWiki Message*

--- a/Delhi.mw
+++ b/Delhi.mw
@@ -80,7 +80,7 @@
 
 Ing '''Delhi''' ({{lang-hi|दिल्ली}}; {{lang-pa|ਦਿੱਲੀ}}; {{lang-ur| دلی}}; {{IPA2|d̪ɪlːiː}}; a ausan da muring ''Dilli'') ing [[w:List of most populous cities in India|kaduang pekamaragul]] a metropolis ning [[India]], at maki populasiun yang labimpitung (17) miliun <ref>http://www.censusindia.gov.in/Census_Data_2001/Projected_Population/Projected_population.aspx#2008</ref>, at metung a [[Estadu ampong teritoriu ning India|union territory]] a opisial a mayayaus a National Capital Territory of Delhi (NCT). 
 
-Atiu iti kareng pampangan ning [[w:Yamuna River|Ilug Yamuna]] king [[Punjab (labuad)]] ning [[pangulung India]], at metung ya kareng [[w:List of oldest continuously inhabited cities|lakanbalen a pekamaluat da nang tutuknangan a alang patugut king yatu]] (''oldest continuously inhabited cities in the world''). 
+Atiu iti kareng pampang ning [[w:Yamuna River|Ilug Yamuna]] king [[Punjab (labuad)]] ning [[pangulung India]], at metung ya kareng [[w:List of oldest continuously inhabited cities|lakanbalen a pekamaluat da nang tutuknangan a alang patugut king yatu]] (''oldest continuously inhabited cities in the world''). 
 
 Tungku (capitoliu o cabecera) de reng mapilang imperiu ning India kanitang minuna ing Delhi, at metung yang maulagang lakanbalen kareng mangatuang [[dalan a pangkalakal]] (trade routes) king pilatan ning pangulu-albugan (''northwest'') ning India ampo reng [[w:Indo-Gangetic Plain|Kapatagan a Indo-Gangetic]]. Dakal a monumentung ibat kanitang minuna ampo king Edad Media, karinan a archeological, ampong aliwa pang lugal a makasalesayan. Tinikdo ne ning emperador a [[Mughal]] a i [[Shahjahan]] ing lakanbalen a ausan da ngening "Old Delhi" (Matuang Delhi), bang magsilbing tungku ning [[w:Mughal Empire|Imperiung Mughal]] pilatan ning [[1649]] ampong [[1857]].    
 
