*Empty MediaWiki Message*

--- a/Dhar.mw
+++ b/Dhar.mw
@@ -22,7 +22,7 @@ website = |
 footnotes = |
 }}
 
-Ing '''Dhar''', o ing makasalesayang balen aniang Edad Media a ing ''Dhara Nagari'', mayayakit ya king labuad ning [[Malwa]] king dake nang albugan ('western'') ning [[Estadu ampong teritoriu ning India|estadu]] ning [[Madhya Pradesh]] king kalibudtang [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Dhar (Distritu)]].    
+Ing '''Dhar''', o ing makasalesayang balen aniang Edad Media a ing ''Dhara Nagari'', mayayakit ya king labuad ning [[Malwa]] king dake nang albugan (''western'') ning [[Estadu ampong teritoriu ning India|estadu]] ning [[Madhya Pradesh]] king kalibudtang [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Dhar (Distritu)]].    
 
 ==Suglung palual==
 *[http://dhar.nic.in/ Dhar District governmental website]
