*Empty MediaWiki Message*

--- a/Dharamsala.mw
+++ b/Dharamsala.mw
@@ -23,7 +23,7 @@ website = |
 footnotes = |
 }}
 
-Ing '''Dharamsala''' o Dharamshāla, ("Rest House" o "Bale Pipagpainauan"; [[Hindi]]: धर्मशाला; {{bo|t=དྷ་རམ་ས་ལ་}}; Hindi pronunciation {{IPA|/d̪ʱərmʃɑlɑ/}}), metung yang balen ampng metung a [[w:municipal council|municipal council]] king [[Kangra (distritu)]] king dake nang pangulu (''northern'') ning [[India]], king estadu ning [[Himachal Pradesh]].  
+Ing '''Dharamsala''' o Dharamshāla, ("Rest House" o "Bale Pipagpainauan"; [[Hindi]]: धर्मशाला; {{bo|t=དྷ་རམ་ས་ལ་}}; Hindi pronunciation {{IPA|/d̪ʱərmʃɑlɑ/}}), metung yang balen ampong metung a [[w:municipal council|municipal council]] king [[Kangra (distritu)]] king dake nang pangulu (''northern'') ning [[India]], king estadu ning [[Himachal Pradesh]].  
 
 Taniag ya ing balen antimong tungku (capitoliu o cabecera) ning [[w:Central Tibetan Administration|Central Tibetan Admiistration]], metung a [[w:government in exile|government in exile]] a [[Tibet]]an a panibalan nang [[Tenzin Gyatso]], ing ka-14 ampong kasalungsungan a [[Dalai Lama]]. ti lu king [[McLeod Ganj]] deng pun tanggapan (''headquarters'') ning kapamahalan. Iti metung yang karulun (''suburb'') a ausan da mu namang Upper Dharamsala (Dharamsalang Babo) o "Little [[Lhasa]]" (Malating Lhasa).  
 
