*Empty MediaWiki Message*

--- a/Babi.mw
+++ b/Babi.mw
@@ -3,7 +3,7 @@
 {{Redirect|Sus||SUS}}
 
 {{Taxobox
-| name = Pig
+| name = Babi
 | image = Sow with piglet.jpg
 | image_width = 250px
 | image_caption = Metung a [[gaindung babi]] ampo ing kayang bigak.
