--- a/Talacogon.mw
+++ b/Talacogon.mw
@@ -41,6 +41,7 @@ Ing Talacogon atin yang 16 a [[barangay]].
 [[ceb:Talacogon, Agusan del Sur]]
 [[de:Talacogon]]
 [[en:Talacogon, Agusan del Sur]]
+[[fr:Talacogon]]
 [[nl:Talacogon (Agusan del Sur)]]
 [[tl:Talacogon, Agusan del Sur]]
 [[war:Talacogon, Agusan del Sur]]
