--- a/Sibagat.mw
+++ b/Sibagat.mw
@@ -50,6 +50,7 @@ Ing Sibagat atin yang 24 a [[barangay]].
 [[ceb:Sibagat, Agusan del Sur]]
 [[de:Sibagat]]
 [[en:Sibagat, Agusan del Sur]]
+[[fr:Sibagat]]
 [[nl:Sibagat (Agusan del Sur)]]
 [[tl:Sibagat, Agusan del Sur]]
 [[war:Sibagat, Agusan del Sur]]
