*Empty MediaWiki Message*

--- a/Davanagere.mw
+++ b/Davanagere.mw
@@ -19,7 +19,7 @@ population_density =
 |footnotes = | 
 }}
 
-Ing '''Davanagere''' o '''Davangere''' ([[Kannada]]:ದಾವಣಗೆರೆ) metung yang lakanbalen o ciudad king estadu ning [Karnataka]], [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Davanagere (Distritu)]]. Atiu king NH4 (National Highway 4) ing Davanagere, at maki dayu yang 260 km manibat king tungku (capitoliu o cabecera) ning [[Bangalore]]. Megi yang saparadung distritu ing Davangere aniang 1997, nung kapilan ya mikawani king distritu ning [[Chitradurga]].  
+Ing '''Davanagere''' o '''Davangere''' ([[Kannada]]:ದಾವಣಗೆರೆ) metung yang lakanbalen o ciudad king estadu ning [[Karnataka]], [[India]]. Iti ing pun tanggapan pangkapanibalan (''administrative headquarters'') ning [[Davanagere (Distritu)]]. Atiu king NH4 (National Highway 4) ing Davanagere, at maki dayu yang 260 km manibat king tungku (capitoliu o cabecera) ning [[Bangalore]]. Megi yang saparadung distritu ing Davangere aniang 1997, nung kapilan ya mikawani king distritu ning [[Chitradurga]].  
 
 ==Suglung palual==
 * [http://www.davanagerecity.gov.in Davangere City Corporation]
