--- a/Daltonganj.mw
+++ b/Daltonganj.mw
@@ -18,7 +18,7 @@
 |postal_code             =
 }}
 
-Ing '''Daltonganj''' metung yang balen king estadu ning [[Jharkhand]], [[India]]. Pun tanggapan (''headquarters'') ne ning [[Palamu]] commissionery, a sasakup kreng atlung distritu: [[Palamu District|Palamu]], [[Garhwa District|Garhwa]] ampong [[Latehar District|Latehar]]. Atiu ing balen king pampang ning ilug a North Koel.
+Ing '''Daltonganj''' metung yang balen king estadu ning [[Jharkhand]], [[India]]. Pun tanggapan (''headquarters'') ne ning [[Palamu]] commissionery, a sasakup kareng atlung distritu: [[Palamu District|Palamu]], [[Garhwa District|Garhwa]] ampong [[Latehar District|Latehar]]. Atiu ing balen king pampang ning ilug a North Koel.
   
 Ing Daltonganj lagiu ne mu naman ning metung a subdivision king [[w:Palamu district|distritu ning Palamu]], ampo ning metung a block keting subdivision.<ref>{{cite web
 |url=http://palamu.nic.in/admin.htm
