*Empty MediaWiki Message*

--- a/Dhanbad.mw
+++ b/Dhanbad.mw
@@ -24,7 +24,7 @@
 | footnotes =
 }}
 
-Ing '''Dhanbad''' ({{lang-hi|धनबाद}}) metung yang lakanbalen ampong [[municipal corporation|corporation]] a melalang kapamilatan ning pamisanib da reng lugal (''areas'') a Jharia NAC, Sindri NAC, Chhatandh NAC, Katras NAC ampong aduang pulu't 27 a balen king sensus (agpang king sensus ning 2001), 258 a nayun ampong lugal lalam ning Munisipalidad ning Dhanbad, king [[Dhanbad (distritu)]] king estadu ning [[Jharkhand]], [[India]]. Agpang king sensus ning 2001, iti ing ka-27 a pekamaragul a lakanbalen king India, ampo ing katlung pekamaragul king estadu ning Jharkhand. Kabalitan ya kareng mina nang karbon (''coal'') ampong pabrika.  
+Ing '''Dhanbad''' ({{lang-hi|धनबाद}}) metung yang lakanbalen ampong [[municipal corporation|corporation]] a melalang kapamilatan ning pamisanib da reng lugal (''areas'') a Jharia NAC, Sindri NAC, Chhatandh NAC, Katras NAC ampong aduang pulu't 27 a balen king sensus (agpang king sensus ning 2001), 258 a nayun ampong lugal lalam ning Munisipalidad ning Dhanbad, king [[Dhanbad (distritu)]] king estadu ning [[Jharkhand]], [[India]]. Agpang king sensus ning 2001, iti ing ka-27 a pekamaragul a lakanbalen king India, ampo ing katlung pekamaragul king estadu ning Jharkhand. Kabalitan ya kareng mina nang karbon (''coal'') ampo kareng pabrika.  
 
 ==Dalerayan==
 <references/>
