*Empty MediaWiki Message*

--- a/Prepektura_ning_Miyazaki.mw
+++ b/Prepektura_ning_Miyazaki.mw
@@ -28,8 +28,11 @@
 Ing {{nihongo|'''Miyazaki Prefecture'''|宮崎県|Miyazaki-ken}} metung yang [[Prefectures of Japan|prefecture]] ning [[Japan]] atiu king pulu ning [[Kyūshū]]. Ing tungku iyapin ing lakanablen ning [[Miyazaki, Miyazaki|Miyazaki]].
 
 == Amlat ==
+Kasalesayanan, kaibat ning [[Meiji Restoration]], [[Hyūga Lalawigan]] mipalgyuan yang pasibayung  Miyazaki Prefecture. Lawen ya rin [[Pangalako ning han tuntunan]] articulu para keng mabusising talamitam.
 
 == Geografia ==
+
+Ing Miyazaki Prefecture atiu king alsgan dake ning pulu ning Kyūshū. Makapadurut ya kareng  [[Pacific Ocean]] keng mauli ampong aslagan, [[Ōita Prefecture]] king pangulu, ampong [[Kumamoto Prefecture|Kumamoto]] ampong [[Kagoshima Prefecture|Kagoshima]] Prefectures king albugan.
 
 == Lawen ya rin ==
 *[[Miyazaki Ocean Dome]]
