*Empty MediaWiki Message*

--- a/Datia.mw
+++ b/Datia.mw
@@ -22,7 +22,7 @@ website = |
 footnotes = |
 }}
 
-Ing '''Datia''' metung yang lakanbalen o ciudad ampong metung a [[w:municipality|munisipalidad]] king [[Datia (distritu)]] king estadu ning [[Madhya Pradesh]], [[India]]. Iti ing sentrung pangkapanibalan (''administrative center'') ning Distritu ning Datia, at sadia ne muring sentru ning [[w:princely state|princely state]] king [[w:British Raj|Kapamahalan ning Britania]].  
+Ing '''Datia''' metung yang lakanbalen o ciudad ampong metung a [[w:municipality|munisipalidad]] king [[Datia (distritu)]] king estadu ning [[Madhya Pradesh]], [[India]]. Iti ing sentrung pangkapanibalan (''administrative center'') ning Distritu ning Datia, at sadia ne muring sentru ning [[w:princely state|princely state]] kanitang panaun ning [[w:British Raj|Kapamahalan ning Britania]].  
 
 ==Suglung palual==
 *[http://datia.nic.in/ Government website on Datia district]
