--- a/Prepektura_ning_Nagano.mw
+++ b/Prepektura_ning_Nagano.mw
@@ -23,14 +23,14 @@
 | Website        = [http://www.pref.nagano.jp/english/indexe.htm www.pref.nagano.jp/<br/>english/indexe.htm]
 | Governor       = [[Jin Murai]]
 }}
-{{nihongo|'''Nagano Prefecture'''|長野県|Nagano-ken}} is a [[Prefectures of Japan|prefecture]] of [[Japan]] located in the [[Chūbu region]] of the island of [[Honshū]]. The capital is the city of [[Nagano, Nagano|Nagano]].
+Ing {{nihongo|'''Nagano Prefecture'''|長野県|Nagano-ken}} metung yang [[Prefectures of Japan|prefecture]] ning [[Japan]] atiu king [[Chūbu labuad]] ning pulu ning [[Honshū]]. Ing kyang tungku iyaping ing lakanbalen nign [[Nagano, Nagano|Nagano]].
 
-== History ==
-Nagano was formerly known as the province of [[Shinano Province|Shinano]], and was divided among many local [[daimyo]] during the [[Sengoku]] period.
+== Amlat ==
+Ing Nagano dati kebaluan bilang lalawigan ning [[Shinano Lalawigan|Shinano]], at mirake ya kareng local a [[daimyo]] inyang panaun ning  [[Sengoku]].
 
-Nagano was host to the [[1998 Winter Olympics]], which gained the prefecture international recognition as well as gaining the prefecture a [[Shinkansen]] line to [[Tokyo]].
+Ing Nagano iyapin ing punung abala keng [[1998 Winter Olympics]], nung nu akamtan ning prefecture ing international a pamagkilala at makanyan mu rin ing ikua na ning prefecture metung a [[Shinkansen]] a gulis papuntang [[Tokyo]].
 
-[[Image:NaganoMapCurrent.png|thumb|left|250px|Map of Nagano Prefecture.]]
+[[Image:NaganoMapCurrent.png|thumb|left|250px|Mapa ning Nagano Prefecture.]]
 
 
 ===Lakanbalen===
