--- a/Prepektura_ning_Nagano.mw
+++ b/Prepektura_ning_Nagano.mw
@@ -34,7 +34,7 @@ Ing Nagano iyapin ing punung abala keng [[1998 Winter Olympics]], nung nu akamta
 
 
 ===Lakanbalen===
-Labiang siyam a lakanbalen atiu la king Nagano Prefecture:
+Ding labing siyam a lakanbalen atiu la king Nagano Prefecture:
 {|
 |valign="top"|
 *[[Azumino, Nagano|Azumino]]
