*Empty MediaWiki Message*

--- a/Agostu_8.mw
+++ b/Agostu_8.mw
@@ -86,6 +86,7 @@ Ing '''[[Agostu 8]]''' ya ing  pang 220 a aldo ning banua keng [[Gregorian Calen
 [[li:8 augustus]]
 [[lmo:08 08]]
 [[lt:Rugpjūčio 8]]
+[[lv:8. augusts]]
 [[mk:8 август]]
 [[mr:ऑगस्ट ८]]
 [[ms:8 Ogos]]
