--- a/Vendée.mw
+++ b/Vendée.mw
@@ -7,7 +7,7 @@ population=559,888|pop_date=2004|pop_rank=45th|density=80|
 area=6720|area_scale=9|
 arrond=3|cantons=31|communes=282|
 president=[[Philippe de Villiers]]|pres_party=|
-img_coa=blason85.PNG|
+img_coa=Blason dpt fr 85 Vendée.svg|
 }}
 
 Ing '''Vendée''' metung yang French [[Ding Departamentu ning France|departamentu]], king albugang kalibudtan na ning [[France]], keng [[Atlantic Ocean|Atlantic]]'s [[Bay ning Biscay]]. Ing lagyung ''Vendée'' menibat ya keng [[Vendée River|Vendée a ilug]] nung nu mamagus ya keng mauling-aslagan ning departamentu.
