*Empty MediaWiki Message*

--- a/Template:Infobox_Prefecture_Japan.mw
+++ b/Template:Infobox_Prefecture_Japan.mw
@@ -45,7 +45,7 @@
 |- class="mergedtoprow"
 |colspan="2"| '''Prefectural Symbols''' 
 |- class="mergedrow"
-| &nbsp;- '''Bulaklak'''
+| &nbsp;- '''Sampaga'''
 | {{{Flower}}}
 |- class="mergedrow"
 | &nbsp;- '''Pun Dutung'''
