--- a/Prepektura_ning_Nagasaki.mw
+++ b/Prepektura_ning_Nagasaki.mw
@@ -33,11 +33,11 @@
 Ing {{nihongo|'''Nagasaki Prefecture'''|長崎県|Nagasaki-ken}} metung yang [[Prefectures of Japan|prefecture]] ning [[Japan]] atiu king pulu ning [[Kyūshū]]. Ing kayang tungku iyapin ing lakanbalen ning [[Nagasaki, Nagasaki|Nagasaki]].
 
 == Amlat ==
-Ing Nagasaki Prefecture, metung yang pamiabe-abe da reng lalawigan ning [[Hizen Lalawigan|Hizen]], [[Tsushima Lalawigan|Tsushima]], ampong [[Iki Lalawigan|Iki]], atin lang matalik a pamiugne kareng aliwang civilisadu kareng mengalabsan a dilanua. Makyarap keng [[Tsina]] ampong [[Korea]], ing labuad makpadurut [[Hirado, Nagasaki|Hirado]] metung yang kegisingan a kalibudtaran da reng mangalakal ampong pirata. 
+Ing Nagasaki Prefecture, metung yang pamiabe-abe da reng lalawigan ning [[Hizen Lalawigan|Hizen]], [[Tsushima Lalawigan|Tsushima]], ampong [[Iki Lalawigan|Iki]], atin lang matalik a pamiugne kareng aliwang civilisasiun kareng mengalabasan a dilanua. Makayarap keng [[Tsina]] ampong [[Korea]], ing labuad makapadurut ya keng [[Hirado, Nagasaki|Hirado]] metung yang kegisingan a kalibudtaran da reng mangalakal ampong pirata. 
 
 
 ==Labuad==
-Ing Nagasaki Prefecture atin yang 13 lakanbalen, 4 distritu, ampong apulung lakanbalen. ala nang barriu kilub ning Nagasaki Prefecture uli ning pamiabe da reng [[Oshima, Nagasaki|Oshima]].
+Ing Nagasaki Prefecture atin yang 13 lakanbalen, 4 distritu, ampong apulung lakanbalen. Ala nang barriu kilub ning Nagasaki Prefecture uli ning pamiabe da reng [[Oshima, Nagasaki|Oshima]].
 
 ====Lakanbalen====
 *[[Gotō, Nagasaki|Gotō]]
